app-prd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prd-iqs-services
  name: upload-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: upload-service
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: upload-service
    spec:
      containers:
        - image: registry.digitalocean.com/iqs-site-applications-images/upload-service:IMAGE_TAG
          imagePullPolicy: Always
          name: upload-service
          resources:
            requests:
              cpu: 0.1
              memory: 128Mi
            limits:
              memory: 256Mi
              cpu: 0.2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: prd-iqs-services
  name: upload-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: upload-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-upload-service
  namespace: prd-iqs-services
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aquiagenda.com.br
      secretName: letsencrypt-nginx
  rules:
    - host: aquiagenda.com.br
      http:
        paths:
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: upload-service
                port:
                  number: 8080
